Update and rename config.ini.example to config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [pyrogram]
 # api_id, api_hash please go to https://my.telegram.org/apps
-api_id = [DATA EXPUNGED]
-api_hash = [DATA EXPUNGED]
+api_id = [7211896]
+api_hash = [d22a4d25860c6673209ea07dc194857a]
 # Please create a new bot via @BotFather using /newbot command to get your bot_token
-bot_token = [DATA EXPUNGED]
+bot_token = [2064609555:AAGeElYciRg-nIKYEsH-53zZkklxB3oyt54]
 parse_mode = htm
 
 [plugins]
